# TensorWarp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RESEARCH.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: backend.rs  kernel.rs  lib.rs  metal.rs  ptx.rs
crates/ir/: Cargo.toml
crates/ir/src/: dtype.rs  graph.rs  lib.rs  op.rs  shape.rs
crates/kernels/: Cargo.toml
crates/kernels/src/: attention.rs  attention_ext.rs  autotune.rs  batch.rs  bench.rs  builder.rs  c_api.rs  cache.rs  calibrate.rs  conv.rs  cost_model.rs  cublas_bench.rs  cublas_gemm.rs  cuda_graph.rs  detect.rs  device.rs  edge_ops.rs  elementwise.rs  engine.rs  extended_ops.rs  forensics.rs  fp16.rs  fused_qkv.rs  gated_delta_net.rs  gather.rs  gemm.rs  gemm_fast.rs  gemm_small.rs  gemm_splitk.rs  gemm_tc.rs  gemm_v2.rs  gemma_generate.rs  generate.rs  kv_cache.rs  layernorm.rs  lib.rs  mem_pool.rs  missing_ops.rs  moe.rs  moe_batched.rs  (+24 more)
crates/kernels/src/cognitive/: mod.rs  persona.rs  sae.rs  steer.rs
crates/kernels/src/cuda/: gated_delta_net.cu  qwen3_5_attn.cu  qwen3_5_ffn.cu
crates/loader/: Cargo.toml
crates/loader/src/: debug_model.rs  gemma.rs  gemma_moe.rs  gemma_moe_gguf.rs  gemma_moe_q4.rs  gemma_nvfp4.rs  gguf.rs  graph_exec.rs  hub.rs  lib.rs  llama.rs  moe_warp_cache.rs  onnx.rs  onnx_compile.rs  onnx_exec.rs  onnx_validate.rs  pipeline.rs  qwen3_5_dense_q4.rs  safetensors_loader.rs  tokenizer.rs  warp_cache.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: autofuse.rs  constfold.rs  fusion.rs  lib.rs  memory_plan.rs  pass.rs  pattern.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: engine.rs  lib.rs  memory.rs  profile.rs  schedule.rs  tiered.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  PRD.md  RESEARCH_PROMPTS.md  SESSION_HANDOFF_100_TOKS.md  SESSION_STATUS.md  SPEC.md  TensorWarp Research Prompts for Advancement.md  githubcodes.txt  trtupgrade .txt
docs/research_prompts/: marlin-adaptive-gemm-findings.md  marlin-adaptive-quantized-gemm.md
examples/: README.md  builder_api.rs  hello_gpu.rs  onnx_inference.rs
models/: tiny_transformer.onnx
python/: benchmark.py  pyproject.toml  setup.py
python/tensorwarp/: __init__.py  hf_loader.py
src/: lib.rs
