[package]
name = "warp-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU kernel code generation backends for Warp"

[dependencies]
warp-ir.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
