[package]
name = "warp-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph intermediate representation for the Warp inference engine"

[dependencies]
thiserror.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
half.workspace = true
serde.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
